--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "adalab-web-starter-kit",
 	"version": "3.0.1",
+	"homepage": "./",
 	"description": "Adalab web starter kit",
 	"dependencies": {
 		"browser-sync": "^2.26.12",
@@ -30,7 +31,8 @@
 		"start": "./node_modules/.bin/gulp",
 		"docs": "rm -rf docs && ./node_modules/.bin/gulp docs",
 		"push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
-		"deploy": "npm run push-docs"
+		"deploy": "npm run push-docs",
+		"githubpages": "rm -rf build && rm -rf docs && npm run build && mv build docs && git add docs/* && git commit -m \"Publish in GitHub Pages\" && git push"
 	},
 	"repository": {
 		"type": "git",
